@@ -1,3 +1,5 @@
+lblReleaseYear=Uitgebracht op (Jaar)
+lblArtist=Artiest
 sysBoardgameFieldgame_mechanics=Speleigenschappen
 sysBoardgame_boardgame_mechanicsFieldLabel=Label
 sysBoardgame_boardgame_mechanicsFieldalternative_names=Alternatieve Namen
