@@ -1,3 +1,5 @@
+lblArtist = Artist
+lblReleaseYear = Released (Year)
 lblDatabaseLanguage = Database Language
 lblSelectedItems = Selected Items
 lblIconSize = Icon Size
